# AIsee

./: .env  .gitignore  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 79b3e3d28374_first_migration_3.py  821ced9293f6_change_user_model.py  a2fdff825407_first_migration.py
api/: dependencies.py
api/routes/: auth.py  main.py  video.py
db/: database.py
models/: analysis_result.py  frame.py  user.py  video.py
repositories/: analysis.py  base.py  frame.py  user.py  video.py
schemas/: analysis_result.py  enums.py  frame.py  token.py  user.py  video.py
services/: auth.py  security.py  user.py  video.py
